--- a/index.html
+++ b/index.html
@@ -4,15 +4,57 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Bootstrap Package -->
+  <!-- BOOTSTRAP -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-  <!-- CSS Start -->
-  <link rel="stylesheet" href="./src/styles/root.css">
+  <!-- CSS START -->
+  <link rel="stylesheet" href="./src/dist/style.css">
   <title>Voxy</title>
 </head>
 
-<body>
+<body class="d-flex flex-column">
+  <div class="wrapper">
+    <div class="profile-bkg-wrapper pf-wrapper">
+    </div>
+    <div class="slice-div text-center">
+      <div class="profile-image-wrapper justify-content-center text-center">
+        <img class="rounded-circle pfp" src="https://cdn.discordapp.com/avatars/951479359011704862/a_0fd3b6afd522c1b6e87d5a6fff6a7721.gif?size=2048" width="100" height="100" />
+      </div>
+    </div>
+    <div class="info-wrapper text-center">
+      <h1 class="name">VOXY</h1>
+      <p class="tag">Fullstack Frontend Developer</p>
+    </div>
+  </div>
+
+  <div class="container text-center buttons">
+    <div class="row justify-content-center gx-3">
+      <div class="col-lg-4 col-md-6" onclick="cardClick(')">
+        <div class="card my-3 position-relative mb-3 text-c">
+          <img src="https://cdx.solo.to/images/link/github.svg" class="flat-icon">
+          <br>
+          <h3 class="title">GITHUB</h3>
+          <a href="#" class="text-muted cardlink"><p>Voxerium</p><a/>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6" onclick="cardClick('https://discord.gg/k9U5SVrrHP')">
+        <div class="card my-3 position-relative mb-3">
+          <img src="./src/images/discord.png" class="flat-icon">
+          <br>
+          <h3 class="title">DISCORD</h3>
+          <a href="https://discord.gg/k9U5SVrrHP" class="text-muted cardlink"><p>Orion Industries Server</p></a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+<footer id="sticky-footer" class="flex-shrink-0 py-4 text-white-50">
+  <div class="container text-center">
+    <small class="text-muted">Copyright &copy; 2022, Orion Industries</small>
+  </div>
+</footer>
+
+<script src="./src/index.js"></script>
 
 </body>
 
