--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
 
   <div class="container text-center buttons">
     <div class="row justify-content-center gx-3">
-      <div class="col-lg-4 col-md-6" onclick="cardClick(')">
+      <div class="col-lg-4 col-md-6" onclick="cardClick('https://github.com/Voxerium/')">
         <div class="card my-3 position-relative mb-3 text-c">
           <img src="https://cdx.solo.to/images/link/github.svg" class="flat-icon">
           <br>
           <h3 class="title">GITHUB</h3>
-          <a href="#" class="text-muted cardlink"><p>Voxerium</p><a/>
+          <a href="#" class="text-muted cardlink"><p>Voxerium's Github</p><a/>
         </div>
       </div>
       <div class="col-lg-4 col-md-6" onclick="cardClick('https://discord.gg/k9U5SVrrHP')">
