--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <img src="./src/images/discord.png" class="flat-icon">
           <br>
           <h3 class="title">DISCORD</h3>
-          <a href="https://discord.gg/k9U5SVrrHP" class="text-muted cardlink"><p>Orion Industries Server</p></a>
+          <a href="https://discord.gg/k9U5SVrrHP" class="text-muted cardlink"><p>Orion's Server</p></a>
         </div>
       </div>
     </div>
