--- a/index.html
+++ b/index.html
@@ -29,32 +29,40 @@
 
   <div class="container text-center buttons">
     <div class="row justify-content-center gx-3">
-      <div class="col-lg-4 col-md-6" onclick="cardClick('https://github.com/Voxerium/')">
-        <div class="card my-3 position-relative mb-3 text-c">
-          <img src="https://cdx.solo.to/images/link/github.svg" class="flat-icon">
+      <div class="col-lg-4 col-md-6" onclick="cardClick('https://github.com/Voxerium')">
+        <div class="card my-3 position-relative mb-3">
+          <div class="text-center">
+            <img src="./src/images/CircleCode.png" class="flat-icon">
+          </div>
           <br>
           <h3 class="title">GITHUB</h3>
-          <a href="#" class="text-muted cardlink"><p>Voxerium's Github</p><a/>
+          <a href="https://github.com/Voxerium" class="text-muted cardlink">
+            <p>Orion's Github</p>
+          </a>
         </div>
       </div>
       <div class="col-lg-4 col-md-6" onclick="cardClick('https://discord.gg/k9U5SVrrHP')">
         <div class="card my-3 position-relative mb-3">
-          <img src="./src/images/discord.png" class="flat-icon">
+          <div class="text-center">
+            <img src="./src/images/CircleLeaf.png" class="flat-icon">
+          </div>
           <br>
           <h3 class="title">DISCORD</h3>
-          <a href="https://discord.gg/k9U5SVrrHP" class="text-muted cardlink"><p>Orion's Server</p></a>
+          <a href="https://discord.gg/k9U5SVrrHP" class="text-muted cardlink">
+            <p>Orion's Server</p>
+          </a>
         </div>
       </div>
     </div>
   </div>
 
-<footer id="sticky-footer" class="flex-shrink-0 py-4 text-white-50">
-  <div class="container text-center">
-    <small class="text-muted">Copyright &copy; 2022, Orion Industries</small>
-  </div>
-</footer>
+  <footer id="sticky-footer" class="flex-shrink-0 py-4 text-white-50">
+    <div class="container text-center">
+      <small class="text-muted">Copyright &copy; 2022, Orion Industries</small>
+    </div>
+  </footer>
 
-<script src="./src/index.js"></script>
+  <script src="./src/index.js"></script>
 
 </body>
 
