--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
   <!-- CSS START -->
   <link rel="stylesheet" href="./src/dist/style.css">
   <title>Voxy</title>
+  <meta name="theme-color" content="#1A1A1A">
+  <meta property="og:title" content="Voxy#0007">
+  <meta name="description" content="Orion Industries | About Voxy">
+  <meta property="og:description" content="Orion Industries | About Voxy">
+  <meta property="og:image" content="https://cdn.discordapp.com/avatars/951479359011704862/a_0fd3b6afd522c1b6e87d5a6fff6a7721.gif?size=2048">
+  <meta name="twitter:card" content="summary">
+  <link rel="shortcut icon" type="image/x-icon" href="./src/images/favicon.png">
 </head>
 
 <body class="d-flex flex-column">
@@ -22,11 +29,17 @@
       </div>
     </div>
     <div class="info-wrapper text-center">
-      <h1 class="name">VOXY</h1>
+      <h1 class="name">VOXY#0007</h1>
       <p class="tag">Fullstack Frontend Developer</p>
     </div>
   </div>
-
+  <div class="container text-center about-me">
+    <h1 class="about-title">About Me</h1>
+    <p class="text-muted paragraph">
+      <span>Hello, I am voxy</span>
+      
+    </p>
+  </div>
   <div class="container text-center buttons">
     <div class="row justify-content-center gx-3">
       <div class="col-lg-4 col-md-6" onclick="cardClick('https://github.com/Voxerium')">
@@ -35,10 +48,12 @@
             <img src="./src/images/CircleCode.png" class="flat-icon">
           </div>
           <br>
-          <h3 class="title">GITHUB</h3>
-          <a href="https://github.com/Voxerium" class="text-muted cardlink">
-            <p>Orion's Github</p>
-          </a>
+          <div class="info-text-wrapper">
+            <h3 class="title">GITHUB</h3>
+            <a href="https://github.com/Voxerium" class="text-muted cardlink">
+              <p>Orion's Repository <img src="https://cdx.solo.to/images/link-button-arrow.svg" class="link-arrows"></p>
+            </a>
+          </div>
         </div>
       </div>
       <div class="col-lg-4 col-md-6" onclick="cardClick('https://discord.gg/k9U5SVrrHP')">
@@ -47,10 +62,12 @@
             <img src="./src/images/CircleLeaf.png" class="flat-icon">
           </div>
           <br>
-          <h3 class="title">DISCORD</h3>
-          <a href="https://discord.gg/k9U5SVrrHP" class="text-muted cardlink">
-            <p>Orion's Server</p>
-          </a>
+          <div class="info-text-wrapper">
+            <h3 class="title">DISCORD</h3>
+            <a href="https://discord.gg/k9U5SVrrHP" class="text-muted cardlink">
+              <p>Orion's Discord Server <img src="https://cdx.solo.to/images/link-button-arrow.svg" class="link-arrows"></p>
+            </a>
+          </div>
         </div>
       </div>
     </div>
