--- a/index.html
+++ b/index.html
@@ -30,14 +30,16 @@
     </div>
     <div class="info-wrapper text-center">
       <h1 class="name">VOXY#0007</h1>
-      <p class="tag">Fullstack Frontend Developer</p>
+      <p class="tag">Lead Developer / Founder</p>
     </div>
   </div>
   <div class="container text-center about-me">
     <h1 class="about-title">About Me</h1>
     <p class="text-muted paragraph">
-      <span>Hello, I am voxy</span>
-      
+      <span>I'm Voxy, I have been learning coding since I was 12years old but then I stopped and started again now that I'm 15years old.</span>
+      <span>I can currently do <u>LuaU</u> (Roblox Programing Language Basically Lua), I'm currently learning Python3,</span>
+      <span>I don't have a Desktop nor Laptop, so I do most of my code on Mobile.</span>
+      <span>I live in the Philippines, I'm currently the founder of <a href="https://discord.gg/k9U5SVrrHP" class="text-muted">Orion Industries.</a></span>
     </p>
   </div>
   <div class="container text-center buttons">
@@ -75,7 +77,7 @@
 
   <footer id="sticky-footer" class="flex-shrink-0 py-4 text-white-50">
     <div class="container text-center">
-      <small class="text-muted">Copyright &copy; 2022, Orion Industries</small>
+      <small class="text-muted">&copy; Voxy Loves You, Orion Industries 2022</small>
     </div>
   </footer>
 
