--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
   <!-- BOOTSTRAP -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <!-- Less -->
+  <link rel="stylesheet/less" type="text/less" href="./src/dist/roots.less">
+  <script src="https://cdn.jsdelivr.net/npm/less"></script>
   <!-- CSS START -->
-  <link rel="stylesheet" href="./src/dist/style.css">
   <title>Voxy</title>
   <meta name="theme-color" content="#1A1A1A">
   <meta property="og:title" content="Voxy#0007">
@@ -21,7 +23,7 @@
 
 <body class="d-flex flex-column">
   <div class="wrapper">
-    <div class="profile-bkg-wrapper pf-wrapper">
+    <div class="profile-bkg-wrapper pf-wrapper text-center justify-content-center">
     </div>
     <div class="slice-div text-center">
       <div class="profile-image-wrapper justify-content-center text-center">
@@ -52,8 +54,8 @@
           <br>
           <div class="info-text-wrapper">
             <h3 class="title">GITHUB</h3>
-            <a href="https://github.com/Voxerium" class="text-muted cardlink">
-              <p>Orion's Repository <img src="https://cdx.solo.to/images/link-button-arrow.svg" class="link-arrows"></p>
+            <a href="https://github.com/Voxerium" class="text-muted cardlink arrow">
+              Orion's Github Repo
             </a>
           </div>
         </div>
@@ -66,8 +68,8 @@
           <br>
           <div class="info-text-wrapper">
             <h3 class="title">DISCORD</h3>
-            <a href="https://discord.gg/k9U5SVrrHP" class="text-muted cardlink">
-              <p>Orion's Discord Server <img src="https://cdx.solo.to/images/link-button-arrow.svg" class="link-arrows"></p>
+            <a href="https://discord.gg/k9U5SVrrHP" class="text-muted cardlink arrow">
+              Orion's Discord Server
             </a>
           </div>
         </div>
