--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   <!-- Less -->
-  <link rel="stylesheet/less" type="text/less" href="./src/dist/roots.less">
+  <link rel="stylesheet/less" type="text/less" href="./src/dist/style.less">
   <script src="https://cdn.jsdelivr.net/npm/less"></script>
   <!-- CSS START -->
   <title>Voxy</title>
@@ -22,17 +22,25 @@
 </head>
 
 <body class="d-flex flex-column">
+  <div class="modal fade" id="imagepopup" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="container text-center modal-cont">
+      <img class="pfp-pop" src="https://cdn.discordapp.com/avatars/951479359011704862/a_0fd3b6afd522c1b6e87d5a6fff6a7721.gif?size=2048" width="300" height="300">
+       <br><a class="open-orig text-white">Open Original</a>
+      </div>
+    </div>
+  </div>
   <div class="wrapper">
     <div class="profile-bkg-wrapper pf-wrapper text-center justify-content-center">
     </div>
     <div class="slice-div text-center">
       <div class="profile-image-wrapper justify-content-center text-center">
-        <img class="rounded-circle pfp" src="https://cdn.discordapp.com/avatars/951479359011704862/a_0fd3b6afd522c1b6e87d5a6fff6a7721.gif?size=2048" width="100" height="100" />
+        <button type="button" data-bs-toggle="modal" data-bs-target="#imagepopup" class="img-btn"><img class="rounded-circle pfp" src="https://cdn.discordapp.com/avatars/951479359011704862/a_0fd3b6afd522c1b6e87d5a6fff6a7721.gif?size=2048" width="100" height="100" /></button>
       </div>
     </div>
     <div class="info-wrapper text-center">
-      <h1 class="name">VOXY#0007</h1>
-      <p class="tag">Lead Developer / Founder</p>
+      <h1 class="name">VOXY</h1>
+      <p class="tag-badge">Lead Developer / Founder</p>
     </div>
   </div>
   <div class="container text-center about-me">
