--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <title>Voxy</title>
   <meta name="theme-color" content="#1A1A1A">
   <meta property="og:title" content="Voxy#0007">
-  <meta name="description" content="Orion Industries | About Voxy">
-  <meta property="og:description" content="Orion Industries | About Voxy">
+  <meta name="description" content="Orion Industries | About Voxy | Founder & Lead Developer">
+  <meta property="og:description" content="Orion Industries | About Voxy | Founder & Lead Developer">
   <meta property="og:image" content="https://cdn.discordapp.com/avatars/951479359011704862/a_0fd3b6afd522c1b6e87d5a6fff6a7721.gif?size=2048">
   <meta name="twitter:card" content="summary">
   <link rel="shortcut icon" type="image/x-icon" href="./src/images/favicon.png">
@@ -26,7 +26,7 @@
     <div class="modal-dialog modal-dialog-centered">
       <div class="container text-center modal-cont">
       <img class="pfp-pop" src="https://cdn.discordapp.com/avatars/951479359011704862/a_0fd3b6afd522c1b6e87d5a6fff6a7721.gif?size=2048" width="300" height="300">
-       <br><a class="open-orig text-white">Open Original</a>
+       <br><a class="open-orig text-white" href="OTUxNDc5MzU5MDExNzA0ODYy.SXnVXq9.2PqDvN9vZ2ajrS1Ku2kaRBEgip7">Open Original</a>
       </div>
     </div>
   </div>
